--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-loader": "^8.2.2",
     "core-js": "^3.9.1",
     "webpack": "^5.26.3",
+    "webpack-bundle-analyzer": "^4.4.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
   },
@@ -43,5 +44,10 @@
   "dependencies": {
     "axios": "^0.21.1"
   },
-  "browserslist": "> 0.25%, not dead"
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 9",
+    "Safari >= 10"
+  ]
 }
