--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:prod": "webpack --mode=production",
+    "build:dev": "webpack --mode=development",
     "start": "webpack serve --open --mode=development"
   },
   "repository": {
