--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:prod": "webpack --mode=production",
     "build:dev": "webpack --mode=development",
-    "start": "webpack serve --open --mode=development"
+    "start": "webpack serve --open --mode=development  --host 0.0.0.0"
   },
   "repository": {
     "type": "git",
